# meridian

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  AI_USAGE_LOG.md  ARCHITECTURE.md  Anchor.toml  BUG_PREVENTION.md  Cargo.toml  DEPLOYMENT_GUIDE.md  LICENSE  Makefile  QA_ADVERSARY.md  README.md  TEST_RESULTS.md  constitution.md  package.json  plan.md  pnpm-lock.yaml  pnpm-workspace.yaml  render.yaml  spec.md  tasks.md  tsconfig.base.json
.cargo/: config.toml
.github/workflows/: ci.yml  devnet-fund.yml
app/: .eslintrc.json  next.config.mjs  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vercel.json
app/src/app/: globals.css  layout.tsx  page.tsx
app/src/components/: AfterHoursModeToggle.tsx  ConnectButton.tsx  ConnectWalletButton.tsx  DisabledHint.tsx  Header.tsx  InfoTip.tsx  NetworkBadge.tsx  WalletBrandIcon.tsx  WalletPickerProvider.tsx  WalletProvider.tsx  WalletSetupChecklist.tsx
app/src/hooks/: useAutomationHealth.ts  useCancelOrder.ts  useConfig.ts  useMarketBalances.ts  useMarkets.ts  useMarketsUserPresence.ts  (+11 more)
automation/: eslint.config.js  package.json  tsconfig.json  tsconfig.tsbuildinfo
automation/src/: index.ts
docs/: AI_INTERVIEW_PREP.md  DEFENSE_BREAKOUT_SCRIPT.md  DEMO_RECORDING_SCRIPT.md  MANUAL_DEMO_RUNBOOK.md
migrations/: deploy.ts
programs/meridian/: Cargo.toml
programs/meridian/src/: constants.rs  error.rs  lib.rs  math.rs  order_book.rs  state.rs
programs/meridian/src/instructions/: admin_settle.rs  buy_no.rs  cancel_order.rs  create_strike_market.rs  init_order_book.rs  initialize_config.rs  match_orders.rs  mint_pair.rs  mod.rs  pause.rs  place_order.rs  redeem.rs  redeem_pair.rs  sell_no.rs  settle_market.rs  settle_market_manual.rs
scripts/: check-devnet-balance.sh  check-idl-fresh.sh  devnet-deploy.sh  devnet-init-config.ts  dump-orderbook.ts  fetch-tech-icons.sh  init-config.mjs  seed-devnet.mjs  seed-late-market.mjs
security/: VULNERABILITY_REPORT.md
tests/: meridian.test.ts  package.json  qa-adversary.property.test.ts  scaffold.test.ts  seed-devnet.mjs  seed-late-market.mjs  tsconfig.json  vitest.config.ts
tests/qa-adversary-reports/: 2026-05-22-static-analysis-followup.md
website/: index.html
(+40 files in other folders)
